[package]
name = "anspm"
version = "0.1.0"
edition = "2024"
author = "akaruineko"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
dirs = "4.0"
nix = "0.26"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
toml = "0.7"
tar = "0.4"
flate2 = "1.0"
